--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,10 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@mui/x-data-grid": "^7.18.0",
+    "@mui/x-date-pickers": "^7.19.0",
+    "dayjs": "^1.11.13",
+    "install": "^0.13.0",
+    "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
