menginisiasi basis data

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 PORT=3000
+MONGO_URI=mongodb+srv://admin:XXaeKxOzJvg2yUEb@cluster0.wkjqmtq.mongodb.net/Questify?retryWrites=true&w=majority&appName=Cluster0
