--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "@mui/x-charts": "^7.19.0",
     "@mui/x-data-grid": "^7.18.0",
     "@mui/x-date-pickers": "^7.19.0",
     "dayjs": "^1.11.13",
