--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^7.19.0",
     "@mui/x-data-grid": "^7.18.0",
     "@mui/x-date-pickers": "^7.19.0",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "npm": "^10.9.0",
